[package]
name = "yawr"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
thiserror = "1.0"
dasp_sample = { version = "0.11", optional = true }

[features]
dasp = ["dasp_sample"]